# murmuro

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.sh  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md
docs/adr/: 0001-api-key-storage.md  0002-single-openai-compatible-transcriber.md
docs/site/: index.html  style.css
src/murmur/: __main__.py  app.py  audio.py  config.py  fn_monitor.py  hotkey.py  hotkey_recorder.py  hud.py  inject.py  key_probe.py  main_window.py  onboarding.py  permissions.py  providers.py  restart.py  secrets.py  settings_dialog.py  sounds.py  tray.py
src/murmuro/: __main__.py  _logging.py  app.py  config.py  fn_monitor.py  hotkey.py  hotkey_recorder.py  hud.py  key_probe.py  main_window.py  onboarding.py  providers.py  restart.py  secrets.py  tray.py  (+2 more)
tests/: test_app_beeps.py  test_app_paste_flow.py  test_app_reload_config.py  test_audio.py  test_config.py  test_factory.py  test_hotkey.py  test_hotkey_recorder.py  test_hud.py  test_inject.py  test_key_probe.py  test_logging.py  test_main_window.py  test_models_page.py  test_onboarding.py  test_openai_compatible.py  test_packaging.py  test_permissions.py  test_providers.py  test_providers_registry.py  test_restart.py  test_secrets.py  test_settings_dialog.py  test_sounds.py  test_start_sh.py  test_theme.py  test_uninstall.py
tools/: make_icns.sh  make_icon.py  pyi_launcher.py
(+23 files in other folders)
